Merged Kohta's branch with trunk. Now we should continue the main development in trunk.